# robotiq_ws

robotiq/gripper_control/: CMakeLists.txt  package.xml
robotiq/gripper_control/src/: gripper_control.cpp  gripper_control.cpp~
robotiq/gripper_srv/: CMakeLists.txt  package.xml
robotiq/gripper_srv/srv/: Grasp.srv
robotiq/robotiq_c_model_control/launch/: c_model_rtu.launch
